layout bugfixes

--- a/client/stylesheets/partials/_normalize.scss
+++ b/client/stylesheets/partials/_normalize.scss
@@ -5,7 +5,6 @@ html,
 body {
     min-height: 100%;
     min-width: 100%;
-    height: 100%;
     box-sizing: border-box;
 }
 
